# Truscholar_Jark

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  approval.py  config.py  database.py  executor.py  main.py  memory.py  models.py  orchestrator.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base.py  cloud_monitor.py  code_reviewer.py  log_monitor.py  test_runner.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  cloud_debugger.py  codebase_analyzer.py  commit_analyst.py  deployment_doctor.py  engineering_metrics.py  pentest.py  performance.py  supervisor.py
backend/app/api/: auth.py  gcp_oauth.py  github_app.py  github_oauth.py  metrics_routes.py  routes.py  security_routes.py  websocket.py  zoho_oauth.py
backend/app/config/: settings.py
backend/app/hooks/: safety.py
backend/app/mcp/: aws.py  datadog.py  gcp.py  github.py  jira.py  kubernetes.py  pentest.py  prometheus.py  semgrep.py  sentry.py  slack.py  terminal.py  zoho.py
backend/app/models/: __init__.py  database.py  metrics_constants.py  metrics_schemas.py  schemas.py
backend/app/services/: memory.py  metrics_collector.py  metrics_scorer.py  metrics_store.py  orchestrator.py  pentest_store.py  redis_service.py
backend/app/tasks/: agent_tasks.py  celery_app.py
backend/app/utils/: encryption.py
backend/integrations/: __init__.py  gcp_client.py  github_client.py
backend/tests/unit/: test_deployment_doctor.py  test_hooks.py  test_supervisor.py
cli/: package.json
docs/: CHANGES.md  (+1 more)
(+59 files in other folders)
