[project]
name = "devops-copilot"
version = "1.0.0"
description = "AI-Powered DevOps Co-Pilot Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "claude-agent-sdk>=0.1.48",
    "anthropic[vertex]>=0.40.0",
    "google-auth>=2.35.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
    "sse-starlette>=2.0.0",
    "websockets>=13.0",
    "qdrant-client>=1.12.0",
    "pymongo>=4.9.0",
    "python-multipart>=0.0.9",
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E712", "UP042"]  # E501: line length, E712: SQLAlchemy uses == True, UP042: str+Enum is valid Pydantic pattern

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
